--- a/package.json
+++ b/package.json
@@ -23,25 +23,52 @@
     "react-addons-update": "^0.14.7",
     "react-dnd": "^2.1.0",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^5.8.25",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^5.3.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-survivejs-kanban": "^0.3.3",
+    "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.21.0",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.0.0",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "^2.16.0",
+    "html-webpack-template": "^4.0.0",
+    "immutable": "^3.8.1",
+    "isparta-instrumenter-loader": "^1.0.0",
     "json-loader": "^0.5.3",
+    "karma": "^0.13.22",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
+    "mocha": "^2.4.5",
+    "node-uuid": "^1.4.7",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
-    "style-loader": "^0.13.0",
+    "redux-devtools": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.7.3"
